--- a/signup.html
+++ b/signup.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Election/Forum Page</title>
 
+    <script src="assets/javascript/tmg-client.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/uikit.min.css" />
+    <link rel="stylesheet" href="assets/css/uikit.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- UIkit CSS -->
@@ -36,6 +37,10 @@
                         <input class="uk-input uk-form-width-medium" type="text" placeholder="Last Name"  id ="LName">
                         <h3 style = "color: white">Email Address</h3>
                         <input class="uk-input uk-form-width-large" type="text" placeholder="email"  id ="email">
+                        <h3 style = "color: white">Username</h3>
+                        <input class="uk-input uk-form-width-medium" type="text" placeholder="create a username"  id ="username">
+                        <h3 style = "color: white">Password</h3>
+                        <input class="uk-input uk-form-width-large" type="password" placeholder="password"  id ="password">
                         <!-- <h2 style = "color: white">Credit Card Info</h2>
                         <h3 style = "color: white">Card Holder's Name</h3>
                         <input class="uk-input uk-form-width-large" type="text" placeholder="John Doe">
@@ -50,11 +55,38 @@
 
 
                     </div>
-                <button class="submit uk-button uk-button-primary" type="button">Submit</button>
+                <button id="signup-btn" class="submit uk-button uk-button-primary" type="button">Submit</button>
                     
             </div>
 
             
         </div>
+        <script>
+            (() => {
+                const tmg = TMG ();
+                const inputs = {
+                    first: document.querySelector ('#fName'),
+                    last: document.querySelector ('#LName'),
+                    email: document.querySelector ('#email'),
+                    username: document.querySelector ('#username'),
+                    password: document.querySelector ('#password')
+                }
+                const extract = () => {
+                    return Object.keys (inputs).reduce ((acc, val) => {
+                        console.log (val, inputs [val]);
+                        return { ...acc, [val]: inputs [val].value }
+                    }, {});
+                }
+                document.querySelector ('#signup-btn').addEventListener ('click', async () => {
+                    let user = extract ();
+                    try {
+                        let signup = await tmg.signup (user);
+                        location.href = '/election.html';
+                    } catch (e) {
+                        alert (e);
+                    }
+                });
+            }) ();
+        </script>
 </body>
 </html>
