lots of changes: styling, election page, stripe page, login page

--- a/login.html
+++ b/login.html
@@ -15,26 +15,18 @@
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/css/uikit.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/login.css">
 </head>
 <body>
         <div class = "main">
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-
-            <div class = "uk-container uk-container-small bg-dark">
-                <h1 style = "color: white">Sign Up</h1>
-                <br>
-                <br>
+            <div>
+                <h1>Log In</h1>
                 <div class = "form">
                     <div class="uk-margin">
-                        <h3 style = "color: white">Username</h3>
-                        <input class="uk-input uk-form-width-medium" type="text" placeholder="create a username"  id ="username">
-                        <h3 style = "color: white">Password</h3>
-                        <input class="uk-input uk-form-width-large" type="password" placeholder="password"  id ="password">
+                        <label>Username</label>
+                        <input class="field" type="text" id ="username">
+                        <label>Password</label>
+                        <input class="field" type="password" placeholder="password"  id ="password">
                         <!-- <h2 style = "color: white">Credit Card Info</h2>
                         <h3 style = "color: white">Card Holder's Name</h3>
                         <input class="uk-input uk-form-width-large" type="text" placeholder="John Doe">
@@ -49,7 +41,7 @@
 
 
                     </div>
-                <button id="login-btn" class="submit uk-button uk-button-primary" type="button">Submit</button>
+                <button id="login-btn" type="button">Submit</button>
                     
             </div>
 
