--- a/stripe.html
+++ b/stripe.html
@@ -36,7 +36,9 @@
       <span>Card</span>
       <div id="card-element" class="field"></div>
     </label>
+    <label id="card-label" class="hidden"></label>
     <button type="submit">Join The World Congress</button>
+    <button id="use-card-on-file" class="hidden alt">Use Card On File</button>
   </form>
   <script src="assets/javascript/stripe.js"></script>
 </body>
